# Flowgen

./: .env.example  .gitignore  CLEANUP_REPORT.md  Dockerfile  LANGCHAIN_INTEGRATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  TESTING_AND_CLEANUP_COMPLETE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  verify_setup.py
alembic/: README  env.py  script.py.mako
alembic/versions/: .gitkeep
app/: __init__.py  main.py
app/controller/: __init__.py  diagram_controller.py  gantt_controller.py  health_controller.py  user_preference_controller.py  wbs_controller.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/middleware/: __init__.py  error_handler.py  request_id.py
app/models/: __init__.py  diagram_model.py  generation_log_model.py  user_preference_model.py
app/repository/: __init__.py  diagram_repository.py  generation_log_repository.py  user_preference_repository.py
app/schemas/: __init__.py  common_schema.py  diagram_schema.py  gantt_schema.py  user_preference_schema.py  wbs_schema.py
app/services/: __init__.py  cache_service.py  diagram_service.py  gantt_service.py  llm_service.py  mermaid_service.py  plantuml_service.py  render_service.py  user_preference_service.py  wbs_service.py
app/utils/: hash_utils.py  logger.py
docs/architecture/: clean-architecture.md
examples/: example_client.py
frontend/: index.html
scripts/: __init__.py  cleanup_old_diagrams.py  seed_data.py
tests/: conftest.py
tests/integration/: __init__.py  (+2 more)
(+2 files in other folders)
